Added license. Added gear icon. Fixed the copyrights
Started moving away from the sample and changing into the next version
of InTheBoks.

--- a/InTheBoks.Web/Views/Shared/_Layout.cshtml
+++ b/InTheBoks.Web/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
 
       <div id="auth-status">
 
+          <img src="~/Content/gear.png" class="authenticated" height="32" width="32"
+              style="margin-top: 8px; margin-right: 10px; cursor: pointer;" title="Settings" />
+
      <div class="initializing auth-box">
              <img src="~/Content/ajax-loader.gif" />
              @Text.Loading...
