--- a/InTheBoks.Web/Views/Home/Index.cshtml
+++ b/InTheBoks.Web/Views/Home/Index.cshtml
@@ -4,8 +4,7 @@
     ViewBag.Title = "InTheBoks.com - Organize Your Stuff";
 }
 
-<h2>@Text.YourCollections</h2>
-
+<img src="../../Content/albums/41A-jqYmLiL.jpg" /><img src="../../Content/albums/516ZF6YQKAL.jpg" /><img src="../../Content/albums/518UVI8xp8L.jpg" /><img src="../../Content/albums/51BtHBW4gQL.jpg" /><img src="../../Content/albums/51MP8TKAFVL.jpg" /><img src="../../Content/albums/51PpJAOkqLL.jpg" /><img src="../../Content/albums/51SSmALB9nL.jpg" /><img src="../../Content/albums/51VfE5rU9OL.jpg" /><img src="../../Content/albums/51vhtc7Lj0L.jpg" />
 
 @section scripts
 {
