--- a/InTheBoks.Web/Views/Shared/_Layout.cshtml
+++ b/InTheBoks.Web/Views/Shared/_Layout.cshtml
@@ -30,17 +30,17 @@
 
     <header id="header">
 
-        <a href="/" id="logo"><img src="~/Content/intheboks_logo_light.png" /></a>
+        <a href="/" id="logo"><img title="InTheBoks.com - Organize Your Stuff" src="~/Content/intheboks_logo_light.png" /></a>
         <div class="loading">
             <img src="../../Content/ajax-loader.gif" /></div>
 
       <div id="auth-status">
 
-        <img src="../../Content/icons/white/search.png" title="Search" class="authenticated" width="40" height="40"
-            style="margin-top: 4px; margin-right: 10px; cursor: pointer; float: left;" />
+        <img src="../../Content/icons/white/search.png" title="Search" class="authenticated action big"
+            style="margin-top: 4px; margin-right: 10px; float: left;" />
 
-          <img src="~/Content/icons/white/settings.png" class="authenticated" onclick="ToggleSettings();" height="40" width="40"
-              style="margin-top: 4px; margin-right: 10px; cursor: pointer; float: left;" title="Settings" />
+          <img src="~/Content/icons/white/settings.png" class="authenticated action big" onclick="ToggleSettings();"
+              style="margin-top: 4px; margin-right: 10px; float: left;" title="Settings" />
 
      <div class="initializing auth-box">
              <img src="~/Content/ajax-loader.gif" />
@@ -69,9 +69,9 @@
         <div id="left-sidebar" class="stretch">
 
             &nbsp;
-            <img src="../../Content/icons/white/add.png" title="New Collection" width="32" height="32" />
-            <img src="../../Content/icons/white/edit.png" title="Edit Collection" width="32" height="32" />
-            <img src="../../Content/icons/white/delete.png" title="Delete Collection" width="32" height="32" />
+            <img src="../../Content/icons/white/add.png" class="action" title="New Collection" width="32" height="32" />
+            <img src="../../Content/icons/white/edit.png" class="action" title="Edit Collection" width="32" height="32" />
+            <img src="../../Content/icons/white/delete.png" class="action" title="Delete Collection" width="32" height="32" />
 
             <div class="margin" style="margin-right: 0px;">
         <ul data-bind="foreach: Items">
@@ -81,17 +81,21 @@
 
         </div>
         <div id="main-content" class="stretch">
-            <img src="../../Content/icons/white/add.png" title="New Item" width="32" height="32" />
-            <img src="../../Content/icons/white/delete.png" title="Delete Item(s)" width="32" height="32" />
+            <img src="../../Content/icons/white/add.png" class="action" title="New Item" />
+            <img src="../../Content/icons/white/delete.png" class="action" title="Delete Item(s)"  />
             
-            <div class="margin">
+            <img src="../../Content/icons/white/basecircle.png" title="List View" class="action" style="float: right; margin-right: 8px;" />
+            <img src="../../Content/icons/white/basecircle.png" title="Thumbnails View" class="action" style="float: right; margin-right: 8px;" />
+            <input type="range" id="thumbnailSize" onchange="ThumbnailRender();" min="32" max="256" value="128" step="8" style="float: right; margin-right: 8px;" />
 
+            <div class="margin">
                 @RenderBody()
             </div>
         </div>
     </div>
 
     <div id="anonymous" class="anonymous content-box stretch">
+        <p>&nbsp;</p>
         @Html.Raw(Text.AnonymousWelcomeText)
     </div>
 
@@ -106,8 +110,8 @@
 
             <p>Change your settings here.</p>
                 <p>
-                    <img onclick="ToggleSettings();" title="Save" src="../../Content/icons/white/save.png" />
-                    &nbsp;<img onclick="ToggleSettings();" title="Cancel" src="../../Content/icons/white/cancel.png" />
+                    <img onclick="ToggleSettings();" class="action big" title="Save" src="../../Content/icons/white/save.png" />
+                    &nbsp;<img onclick="ToggleSettings();" class="action big" title="Cancel" src="../../Content/icons/white/cancel.png" />
                 </p>
             </div>
         </div>
@@ -127,7 +131,6 @@
         // Define the resources on a global level. We should do this before
         // we create any view models, etc.
         Resource = $.parseJSON($("#resources").html());
-
 
         $(window).resize(function () {
             $('#log').append('<div>Handler for .resize() called.</div>');
