Added support for searching for items to add.
Added the first Amazon Web Service integration which retreives movies
based on the user search input. The id and secret are stored in a
separate InTheBoks.ini for security reasons. Make sure you change the
code and config before production deployment, do not put the .ini file
on the server as this is downloadable. Add the keys to your web.config.

--- a/InTheBoks.Web/Content/Site.css
+++ b/InTheBoks.Web/Content/Site.css
@@ -20,6 +20,8 @@ body {
     padding: 0;
 }
 
+
+
 .action {
     cursor: pointer;
     width: 32px;
@@ -37,6 +39,11 @@ body {
 .big {
     width: 40px;
     height: 40px;
+}
+
+.huge {
+     width: 48px;
+    height: 48px;
 }
 
 #thumbnails {
@@ -281,6 +288,22 @@ button {
         margin-right: auto;
     }
 
+.search {
+    width: 100%;
+    display: none;
+    overflow: auto;
+    background-color: rgba(61, 61, 61, 0.7);
+}
+
+    .search > div {
+        margin: 20px;
+        min-width: 450px;
+        max-width: 650px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    
 /* Styles for basic forms
 -----------------------------------------------------------*/
 fieldset {
@@ -329,4 +352,24 @@ textarea {
 
 .validation-summary-valid {
     display: none;
+}
+
+.selected {
+    font-weight: bold;
+    background-color: rgba(194, 194, 194, 0.73);
+}
+
+/*a[href $='.pdf']:after {
+   content:url(gear.png);
+}*/
+
+.results img {
+    border: 3px solid transparent;
+    margin: 0;
+    padding: 0;
+}
+
+.picked {
+    border: 3px solid white !important;
+    opacity: 0.4;
 }
