--- a/InTheBoks.Web/Content/Site.css
+++ b/InTheBoks.Web/Content/Site.css
@@ -1,6 +1,5 @@
 ﻿@import url(http://fonts.googleapis.com/css?family=Pontano+Sans|Gudea);
 
-
 html {
     height: 100%;
 }
@@ -19,7 +18,6 @@ body {
     margin: 0;
     padding: 0;
 }
-
 
 
 .action {
@@ -46,10 +44,10 @@ body {
     height: 48px;
 }
 
-#thumbnails {
+.thumbnails {
 }
 
-    #thumbnails img {
+    .thumbnails span img {
         height: 128px;
         -moz-transition: opacity 0.2s linear;
         -webkit-transition: opacity 0.2s linear;
@@ -57,26 +55,31 @@ body {
         transition: opacity 0.2s linear;
     }
 
-        #thumbnails img:hover {
+        .thumbnails span img:hover {
             opacity: 0.5;
         }
 
 
-
-.button {
-    padding: 30px;
-    border-radius: 10px;
-    margin-bottom: 5px;
-    cursor: pointer;
-    background-color: rgba(234, 234, 234, 0.1);
-    font-family: 'Pontano Sans', sans-serif;
-    font-size: 1.1em;
-    background-image: linear-gradient(bottom, rgba(0,0,0,0.1) 0%, rgba(255,255,255,0.3) 50%, rgba(0,0,0, 0.1) 100%);
-    background-image: -o-linear-gradient(bottom, rgba(0,0,0,0.1) 0%, rgba(255,255,255,0.3) 50%, rgba(0,0,0, 0.1) 100%);
-    background-image: -moz-linear-gradient(bottom, rgba(0,0,0,0.1) 0%, rgba(255,255,255,0.3) 50%, rgba(0,0,0, 0.1) 100%);
-    background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,0.1) 0%, rgba(255,255,255,0.3) 50%, rgba(0,0,0, 0.1) 100%);
-    background-image: -ms-linear-gradient(bottom, rgba(0,0,0,0.1) 0%, rgba(255,255,255,0.3) 50%, rgba(0,0,0, 0.1) 100%);
+.thumbnails>span {
+    padding: 0;
+    margin: 0;
+    display: inline-block;
 }
+
+    .thumbnails>span:before {
+                
+        content:url(/Content/icons/checked2.png);
+        position: absolute;
+        margin-left: 4px;
+        margin-top: 4px;
+        pointer-events: none;
+    }
+
+/*.results img {
+    border: 3px solid transparent;
+    margin: 0;
+    padding: 0;
+}*/
 
 header, footer, nav, section {
     display: block;
@@ -90,7 +93,6 @@ header {
         float: right;
         font-size: 1.1em;
     }
-
 
 
 #AppContainer {
@@ -115,10 +117,34 @@ header {
 }
 
 #content #left-sidebar {
-    width: 200px;
+    width: 150px;
     overflow: auto;
     float: left;
 }
+
+#content #friends {
+    width: 150px;
+    overflow: hidden;
+    float: right;
+}
+
+#friendlist, #friendfeed {
+    width: 150px;
+    font-size: 0.8em;
+    overflow: auto;
+}
+
+#friendlist {
+    border-bottom: 2px solid silver;
+    height: 100px;
+}
+
+#friendlist div img, #friendfeed div img {
+    vertical-align: middle;
+    width: 24px;
+    height: 24px;
+}
+
 
 /*
 #content #right-sidebar {
@@ -228,9 +254,14 @@ a {
 .content-box {
     margin-left: auto;
     margin-right: auto;
-    width: 400px;
+    width: 540px;
     font-size: 1.6em;
     text-align: center;
+}
+
+.content-box img {
+    float: left;
+    margin-right: 20px;
 }
 
 .content {
@@ -242,6 +273,19 @@ a {
 }
 
 .button {
+    padding: 20px;
+    border-radius: 10px;
+    margin-bottom: 5px;
+    cursor: pointer;
+    background-color: rgba(234, 234, 234, 0.1);
+    font-family: 'Pontano Sans', sans-serif;
+    font-size: 1.1em;
+    background-image: linear-gradient(bottom, rgba(0,0,0,0.1) 0%, rgba(255,255,255,0.3) 50%, rgba(0,0,0, 0.1) 100%);
+    background-image: -o-linear-gradient(bottom, rgba(0,0,0,0.1) 0%, rgba(255,255,255,0.3) 50%, rgba(0,0,0, 0.1) 100%);
+    background-image: -moz-linear-gradient(bottom, rgba(0,0,0,0.1) 0%, rgba(255,255,255,0.3) 50%, rgba(0,0,0, 0.1) 100%);
+    background-image: -webkit-linear-gradient(bottom, rgba(0,0,0,0.1) 0%, rgba(255,255,255,0.3) 50%, rgba(0,0,0, 0.1) 100%);
+    background-image: -ms-linear-gradient(bottom, rgba(0,0,0,0.1) 0%, rgba(255,255,255,0.3) 50%, rgba(0,0,0, 0.1) 100%);
+
     -moz-transition: background-color 0.2s linear;
     -webkit-transition: background-color 0.2s linear;
     -o-transition: background-color 0.2s linear;
@@ -249,7 +293,6 @@ a {
 }
 
     .button:hover {
-        padding: 30px;
         background-color: gray;
         border-radius: 10px;
         margin-bottom: 5px;
@@ -257,6 +300,25 @@ a {
         background-color: rgba(234, 234, 234, 0.2);
     }
 
+/*.catalogsList:last-child {
+    margin-top: 20px;
+    background-color: #275477;
+}
+
+.catalogsList:last-child:hover {
+    background-color: #4e7b9e;
+}*/
+
+.selected {
+    font-weight: bold;
+    background-color: rgba(194, 194, 194, 0.73);
+}
+
+.selected:hover {
+    font-weight: bold;
+    background-color: rgba(194, 194, 194, 0.73);
+}
+    
 li {
     list-style-type: none;
     margin: 0;
@@ -354,20 +416,9 @@ textarea {
     display: none;
 }
 
-.selected {
-    font-weight: bold;
-    background-color: rgba(194, 194, 194, 0.73);
-}
-
 /*a[href $='.pdf']:after {
    content:url(gear.png);
 }*/
-
-.results img {
-    border: 3px solid transparent;
-    margin: 0;
-    padding: 0;
-}
 
 .picked {
     border: 3px solid white !important;
