--- a/InTheBoks.Web/Views/Home/Index.cshtml
+++ b/InTheBoks.Web/Views/Home/Index.cshtml
@@ -3,17 +3,16 @@
 @{
     ViewBag.Title = "InTheBoks.com - Organize Your Stuff";
 }
-<div id="thumbnails">
+<div class="thumbnails">
 
-    <a href="hello.pdf">Sweet PDF</a>
-
-    <div data-bind="foreach: Items">
-    <img src="" data-bind="attr: { src: ImageUrl, title: Title }, click: $parent.SelectItem" />
-    </div>
+    <div data-bind="foreach: Items"><span><img data-bind="attr: { src: ImageUrl, title: Title }, click: $parent.SelectItem" /></span></div>
     
-    <img src="../../Content/albums/41A-jqYmLiL.jpg" />
-    <img src="../../Content/albums/516ZF6YQKAL.jpg" />
-    <img src="../../Content/albums/518UVI8xp8L.jpg" /><img src="../../Content/albums/51BtHBW4gQL.jpg" /><img src="../../Content/albums/51MP8TKAFVL.jpg" /><img src="../../Content/albums/51PpJAOkqLL.jpg" /><img src="../../Content/albums/51SSmALB9nL.jpg" /><img src="../../Content/albums/51VfE5rU9OL.jpg" /><img src="../../Content/albums/51vhtc7Lj0L.jpg" />
+    <span><img src="../../Content/albums/41A-jqYmLiL.jpg" /></span>
+    <span><img src="../../Content/albums/516ZF6YQKAL.jpg" /></span><span><img class="selectedImage" src="../../Content/albums/518UVI8xp8L.jpg" /></span>
+    <span><img src="../../Content/albums/51BtHBW4gQL.jpg" /></span>
+    <span><img src="../../Content/albums/51MP8TKAFVL.jpg" /></span><span><img src="../../Content/albums/51PpJAOkqLL.jpg" /></span><span><img src="../../Content/albums/51SSmALB9nL.jpg" /></span>
+    <span><img src="../../Content/albums/51VfE5rU9OL.jpg" /></span>
+    <span><img src="../../Content/albums/51vhtc7Lj0L.jpg" /></span>
        
 </div>
 @section scripts
